<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar" />

    <item
        android:id="@+id/budgetPlanningFragment"
        android:icon="@drawable/ic_target"
        android:title="@string/budget" />

    <item
        android:id="@+id/piggyBankFragment"
        android:icon="@drawable/ic_piggy_bank"
        android:title="@string/piggy_bank" />

    <item
        android:id="@+id/statsFragment"
        android:icon="@drawable/ic_pie_chart"
        android:title="@string/stats" />

    <item
        android:id="@+id/reportsFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/see_reports" />
</menu>