<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/window_black"
        tools:context=".ui.fragments.viewpager.StepThreeFragment">

        <ImageView
            android:id="@+id/img_icon"
            android:layout_width="@dimen/step_icon_size"
            android:layout_height="@dimen/step_icon_size"
            android:layout_marginTop="@dimen/large_margin"
            android:contentDescription="@string/icon"
            app:layout_constraintBottom_toTopOf="@id/lbl_welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/circle_dollar" />

        <TextView
            android:id="@+id/lbl_welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/budget_preferences"
            android:textAlignment="center"
            android:textAppearance="@style/Text.Heading"
            app:layout_constraintBottom_toTopOf="@id/lbl_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_icon" />

        <TextView
            android:id="@+id/lbl_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_margin"
            android:layout_marginTop="@dimen/regular_margin"
            android:text="@string/set_up_your_financial_preferences"
            android:textAlignment="center"
            android:textAppearance="@style/Text.Primary"
            app:layout_constraintBottom_toTopOf="@id/lbl_currency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_welcome" />

        <TextView
            android:id="@+id/lbl_currency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/preferred_currency"
            android:textAppearance="@style/Text.Secondary.Bold"
            app:layout_constraintBottom_toTopOf="@id/til_currency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_description" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_currency"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_margin"
            app:boxBackgroundColor="@color/card_background"
            app:endIconTint="@color/secondary_gray"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/lbl_income"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_currency">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/default_currency"
                android:inputType="none"
                android:paddingHorizontal="14dp"
                android:paddingVertical="8dp"
                android:textColorHint="@color/secondary_gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/lbl_income"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/monthly_income"
            android:textAppearance="@style/Text.Secondary.Bold"
            app:layout_constraintBottom_toTopOf="@id/til_income"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_currency" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_income"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_margin"
            app:boxBackgroundColor="@color/card_background"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/lbl_savings_goal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_income">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_income"
                style="@style/OutlinedEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableStart="@drawable/ic_dollar"
                android:drawablePadding="@dimen/regular_margin"
                android:drawableTint="@color/secondary_gray"
                android:hint="@string/enter_your_monthly_income"
                android:includeFontPadding="false"
                android:inputType="number"
                android:paddingHorizontal="14dp"
                android:paddingVertical="8dp"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/primary_white"
                android:textColorHint="@color/secondary_gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/lbl_savings_goal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/monthly_savings_goal_optional"
            android:textAppearance="@style/Text.Secondary.Bold"
            app:layout_constraintBottom_toTopOf="@id/til_savings_goal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_income" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_savings_goal"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_margin"
            android:layout_marginBottom="@dimen/large_margin"
            app:boxBackgroundColor="@color/card_background"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_savings_goal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_savings_goal"
                style="@style/OutlinedEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawableStart="@drawable/ic_target"
                android:drawablePadding="@dimen/regular_margin"
                android:hint="@string/how_much_do_you_want_to_save_monthly"
                android:includeFontPadding="false"
                android:inputType="number"
                android:paddingHorizontal="14dp"
                android:paddingVertical="8dp"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/primary_white"
                android:textColorHint="@color/secondary_gray" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>