<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lbl_report_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/type"
            android:textAppearance="@style/Text.Secondary.Bold"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/tv_report_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_report_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:drawablePadding="8dp"
            android:textAppearance="@style/Text.Secondary.Bold"
            android:textColor="@color/accent_purple"
            android:textSize="16sp"
            android:textStyle="normal"
            app:drawableStartCompat="@drawable/ic_loop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/lbl_report_type"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="All" />

        <RadioGroup
            android:id="@+id/radio_group_report_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_report_type">

            <RadioButton
                android:id="@+id/radio_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:includeFontPadding="false"
                android:paddingStart="8dp"
                android:text="@string/all"
                android:textAppearance="@style/Text.Heading.Small"
                android:textColor="@color/primary_white"
                android:textStyle="normal"
                tools:checked="true" />

            <RadioButton
                android:id="@+id/radio_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:includeFontPadding="false"
                android:paddingStart="8dp"
                android:text="@string/income"
                android:textAppearance="@style/Text.Heading.Small"
                android:textColor="@color/primary_white"
                android:textStyle="normal" />

            <RadioButton
                android:id="@+id/radio_expenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:includeFontPadding="false"
                android:paddingStart="8dp"
                android:text="@string/expense"
                android:textAppearance="@style/Text.Heading.Small"
                android:textColor="@color/primary_white"
                android:textStyle="normal" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_apply_filters"
            style="@style/ActiveButtonStyle"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:includeFontPadding="false"
            android:text="@string/apply_filters"
            android:textAppearance="@style/Text.Button"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_check"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group_report_type" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>